--- a/src/API/Properties/launchSettings.json
+++ b/src/API/Properties/launchSettings.json
@@ -15,14 +15,6 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "API": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
-    },
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
@@ -32,8 +24,16 @@
         "ASPNETCORE_HTTPS_PORT": "44310"
       },
       "httpPort": 51170,
-      "useSSL": true,
-      "sslPort": 44310
+      "sslPort": 44310,
+      "useSSL": true
+    },
+    "API": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
