--- a/.dockerignore
+++ b/.dockerignore
@@ -7,6 +7,7 @@
 **/.settings
 **/.toolstarget
 **/.vs
+**/.idea
 **/.vscode
 **/*.*proj.user
 **/*.dbmdl
@@ -21,5 +22,6 @@
 **/obj
 **/secrets.dev.yaml
 **/values.dev.yaml
+**/*.DS_Store
 LICENSE
 README.md
