--- a/src/Parser/Parser.csproj
+++ b/src/Parser/Parser.csproj
@@ -5,11 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\src\Contracts\Contracts.csproj" />
+      <PackageReference Include="ClosedXML" Version="0.95.0-beta2" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="ClosedXML" Version="0.95.0-beta2" />
+      <ProjectReference Include="..\Contracts\Contracts.csproj" />
     </ItemGroup>
 
 </Project>
