--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Jwt": {
+    "Key": "ExtremelySecretINFOMATION",
+    "Issuer": "Merkompany",
+    "Audience": "Holopi"
+  },
   "AllowedHosts": "*"
 }
