--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -5,5 +5,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Jwt": {
+    "Key": "ExtremelySecretINFOMATION",
+    "Issuer": "Merkompany",
+    "Audience": "Holopi"
   }
 }
