--- a/src/Data.Dapper/Data.Dapper.csproj
+++ b/src/Data.Dapper/Data.Dapper.csproj
@@ -7,6 +7,11 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.4" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Contracts\Contracts.csproj" />
   </ItemGroup>
 
 </Project>
