--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -6,10 +6,17 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Jwt": {
-    "Key": "ExtremelySecretINFOMATION",
-    "Issuer": "Merkompany",
-    "Audience": "Holopi"
+  "AuthSettings": {
+    "TokenSettings": {
+      "Key": "ExtremelySecretINFORMATION",
+      "Issuer": "Merkompany",
+      "Audience": "Holopi"
+    },
+    "VkSettings": {
+      "ClientSecret": "CgRa3MRXf5CF2ttWutPl",
+      "ClientId": 7263896,
+      "RedirectUri": "http://31.134.151.83/api/auth/callback/vk"
+    }
   },
   "AllowedHosts": "*"
 }
