--- a/src/Contracts/Contracts.csproj
+++ b/src/Contracts/Contracts.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Folder Include="Data" />
     <Folder Include="Domain" />
+    <Folder Include="Models" />
   </ItemGroup>
 
   <ItemGroup>
