Add contract types

--- a/src/API/API.csproj
+++ b/src/API/API.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\Parser\Parser.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Attributes" />
+  </ItemGroup>
+
 </Project>
