--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -18,5 +18,6 @@
       "RedirectUri": "http://31.134.151.83/api/auth/callback/vk"
     }
   },
+  "ConnectionString": "User ID=postgres;Password=postgres;Host=db;Port=5432;Database=scheduler;Pooling=true;",
   "AllowedHosts": "*"
 }
