--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -5,5 +5,6 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "ConnectionString": "User ID=postgres;Password=postgres;Host=localhost;Port=5433;Database=scheduler;Pooling=true;"
 }
