--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -15,7 +15,8 @@
     "VkSettings": {
       "ClientSecret": "CgRa3MRXf5CF2ttWutPl",
       "ClientId": 7263896,
-      "RedirectUri": "http://31.134.151.83/api/auth/callback/vk"
+      "RedirectUri": "http://31.134.151.83/api/auth/callback/vk",
+      "ProviderName": "Vkontakte"
     }
   },
   "ConnectionString": "User ID=postgres;Password=postgres;Host=db;Port=5432;Database=scheduler;Pooling=true;",
